syntax = "proto3";
package api.debug;

import "google/protobuf/timestamp.proto";

service EchoService {
  rpc EchoV1(EchoServiceEchoV1Request) returns (EchoServiceEchoV1Response) {}
}

message EchoServiceEchoV1Request {
  string message = 1;
}

message EchoServiceEchoV1Response {
  string message = 1;
  google.protobuf.Timestamp timestamp = 2;
}
